--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,20 @@ coverself.product.details.uri=/rest/hiring/products
 coverself.exchange.rates.uri=/rest/hiring/exchange-rates
 
 
+africa.origin.percentage=7
+
+inventory.count=20
+
+discount.four=4
+discount.eight=8
+discount.seven=7
+
+discount.hundred=100
+
+discount.twelve=12
+
+price.fivehundred=500
+
+
 
 
